integration weasis-dcm2png + readmes update